--- a/index.html
+++ b/index.html
@@ -27,40 +27,40 @@
     	<h2>Recipe Gallery</h2>
       <div class="wrapper">
         <div class="item">
-          <a href="quaresimale.html"><img src="images/quaresimale.jpg" alt="image of quaresimale, a hard, sugary almond biscotti"></a>
+          <a href="quaresimale.html"><img class = "galleryitem" src="images/quaresimale.jpg" alt="image of quaresimale, a hard, sugary almond biscotti"></a>
         </div>
         <div class="item">
-          <a href="misticachicken.html"><img src="images/misticachicken.jpg" alt="image of mistica chicken, a dish with a creamy sauce"></a>
+          <a href="misticachicken.html"><img class = "galleryitem" src="images/misticachicken.jpg" alt="image of mistica chicken, a dish with a creamy sauce"></a>
         </div>
         <div class="item">
-          <a href="piccata.html"><img src="images/piccata.jpg" alt="image of chicken piccata with asparagus"></a>
+          <a href="piccata.html"><img class = "galleryitem" src="images/piccata.jpg" alt="image of chicken piccata with asparagus"></a>
         </div>
         <div class="item">
-          <a href="sharkasayya.html"><img src="images/sharkasayya.jpg" alt="image of sharkasayya, a boiled chicken dish with garlic walnut sauce"></a>
+          <a href="sharkasayya.html"><img class = "galleryitem" src="images/sharkasayya.jpg" alt="image of sharkasayya, a boiled chicken dish with garlic walnut sauce"></a>
         </div>
         <div class="item">
-          <a href="pecanchicken.html"><img src="images/pecanchicken.jpg" alt="image of pecan chicken dish over salad"></a>
+          <a href="pecanchicken.html"><img class = "galleryitem" src="images/pecanchicken.jpg" alt="image of pecan chicken dish over salad"></a>
         </div>
         <div class="item">
-          <a href="foule.html"><img src="images/foule.jpg" alt="image of foule, cooked fava beans"></a>
+          <a href="foule.html"><img class = "galleryitem" src="images/foule.jpg" alt="image of foule, cooked fava beans"></a>
         </div>
         <div class="item">
-          <a href="leekpotatosoup.html"><img src="images/leekpotatosoup.jpg" alt="image of leek and potato soup in a bowl with bread on the side"></a>
+          <a href="leekpotatosoup.html"><img class = "galleryitem" src="images/leekpotatosoup.jpg" alt="image of leek and potato soup in a bowl with bread on the side"></a>
         </div>
         <div class="item">
-          <a href="kolbasti.html"><img src="images/kolbasti.jpg" alt="image of chicken kolbasti, a buttery roasted cornish hen"></a>
+          <a href="kolbasti.html"><img class = "galleryitem" src="images/kolbasti.jpg" alt="image of chicken kolbasti, a buttery roasted cornish hen"></a>
         </div>
         <div class="item">
-          <a href="romanopasta.html"><img src="images/romanopasta.jpg" alt="image of Tom's pasta, a creamy, cheesy spaghetti dish with bacon"></a>
+          <a href="romanopasta.html"><img class = "galleryitem" src="images/romanopasta.jpg" alt="image of Tom's pasta, a creamy, cheesy spaghetti dish with bacon"></a>
         </div>
         <div class="item">
-          <a href="lentilsoup.html"><img src="images/lentilsoup.jpg" alt="image of lentil soup in a bowl"></a>
+          <a href="lentilsoup.html"><img class = "galleryitem" src="images/lentilsoup.jpg" alt="image of lentil soup in a bowl"></a>
         </div>
         <div class="item">
-          <a href="bananabread.html"><img src="images/bananabread.jpg" alt="image of banana bread"></a>
+          <a href="bananabread.html"><img class = "galleryitem" src="images/bananabread.jpg" alt="image of banana bread"></a>
         </div>
         <div class="item">
-          <a href="taamayya.html"><img src="images/taamayya.jpg" alt="image of taamayya, fava bean falafel"></a>
+          <a href="taamayya.html"><img class = "galleryitem" src="images/taamayya.jpg" alt="image of taamayya, fava bean falafel"></a>
         </div>
       </div>
     </main>
