added fontawesome and google fonts

--- a/recipeindex.html
+++ b/recipeindex.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="images/okra_favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special Elite">
   </head>
   
   <body>
@@ -27,19 +29,24 @@
     <main id = "main">
     	<h2>Recipe Index</h2>
         <ul>
-          <li><a href="quaresimale.html">Quaresimale</a></li>
+          <li><a href="quaresimale.html">Quaresimale</a><i class="fas fa-seedling"></i></li>
           <li><a href="misticachicken.html">Mistica Chicken</a></li>
           <li><a href="piccata.html">Piccata</a></li>
           <li><a href="sharkasayya.html">Sharkasayya</a></li>
           <li><a href="pecanchicken.html">Pecan Chicken</a></li>
-          <li><a href="foule.html">Foule</a></li>
-          <li><a href="leekpotatosoup.html">Leek and Potato Soup</a></li>
+          <li><a href="foule.html">Foule</a><i class="fas fa-seedling"></i><i class="fas fa-seedling"></i></li>
+          <li><a href="leekpotatosoup.html">Leek and Potato Soup</a><i class="fas fa-seedling"></i></li>
           <li><a href="kolbasti.html">Chicken Kolbasti</a></li>
           <li><a href="romanopasta.html">Romano Pasta</a></li>
-          <li><a href="lentilsoup.html">Lentil Soup</a></li>
-          <li><a href="bananabread.html">Banana Bread</a></li>
-          <li><a href="taamayya.html">Taamayya</a></li>
+          <li><a href="lentilsoup.html">Lentil Soup</a><i class="fas fa-seedling"></i></li>
+          <li><a href="bananabread.html">Banana Bread</a><i class="fas fa-seedling"></i></li>
+          <li><a href="taamayya.html">Taamayya</a><i class="fas fa-seedling"></i><i class="fas fa-seedling"></i></li>
         </ul>
+    <p>
+      <i class="fas fa-seedling">vegetarian</i>
+      <br>
+      <i class="fas fa-seedling"></i><i class="fas fa-seedling">vegan</i>
+    </p>
   </main>
 
   <footer>
