--- a/bananabread.html
+++ b/bananabread.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="images/okra_favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special Elite">
   </head>
   <body>
     <a href="#main" class = "offpage">Skip to Content</a>
@@ -23,7 +25,7 @@
 
     </header>
     <main id = "main">
-        <h2>Aunt Dorothy's Banana Bread</h2>
+        <h2>Aunt Dorothy's Banana Bread<i class="fas fa-seedling"></i></h2>
             <p>This is my "aunt" Dorothy's traditional English banana bread recipe.</p>
             <img src="images/bananabread.jpg" alt="image of banana bread">
 
