--- a/foule.html
+++ b/foule.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="images/okra_favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special Elite">
   </head>
   
   <body>
@@ -25,7 +27,7 @@
     </header>
 
     <main id = "main">
-        <h1>Foule</h1>
+        <h1>Foule<i class="fas fa-seedling"></i><i class="fas fa-seedling"></i></h1>
             <p>Foule (fava beans) is a very traditional Egyptian dish, normally eaten with thick pita bread for breakfast.</p>
             <img src="images/foule.jpg" alt="image of foule, cooked fava beans">
 
