--- a/leekpotatosoup.html
+++ b/leekpotatosoup.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="images/okra_favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special Elite">
   </head>
   
   <body>
@@ -25,7 +27,7 @@
     </header>
 
     <main id = "main">
-        <h2>Leek & Potato Soup</h2>
+        <h2>Leek & Potato Soup<i class="fas fa-seedling"></i></h2>
             <p>A super American dish I grew up with; it's exactly what it sounds like.</p>
             <img src="images/leekpotatosoup.jpg" alt="image of leek and potato soup in a bowl with bread on the side">
 
