--- a/lentilsoup.html
+++ b/lentilsoup.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="images/okra_favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special Elite">
   </head>
   
   <body>
@@ -25,7 +27,7 @@
     </header>
 
     <main id = "main">
-        <h2>Lentil Soup (Shorbet 'Ads)</h2>
+        <h2>Lentil Soup (Shorbet 'Ads)<i class="fas fa-seedling"></i></h2>
             <p>Also a traditional Egyptian dish.</p>
             <img src="images/lentilsoup.jpg" alt="image of lentil soup in a bowl">
 
