--- a/quaresimale.html
+++ b/quaresimale.html
@@ -5,6 +5,8 @@
     <link rel="icon" href="images/okra_favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special Elite">
   </head>
   <body>
     <a href="#main" class = "offpage">Skip to Content</a>
@@ -24,7 +26,7 @@
     </header>
     
     <main id = "main">
-        <h2>Quaresimale</h2>
+        <h2>Quaresimale<i class="fas fa-seedling"></i></h2>
             <p>My mother made these over and over to get the perfect recipe. She now gives them out at christmas.</p>
 
             <img src="images/quaresimale.jpg" alt="image of quaresimale, hard, sugary almond biscotti">
