--- a/misticachicken.html
+++ b/misticachicken.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="images/okra_favicon.png">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" type="text/css" href="css/">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special Elite">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Special+Elite">
   </head>
   
   <body>
