--- a/bananabread.html
+++ b/bananabread.html
@@ -16,13 +16,12 @@
             <li><a href = "index.html">Home</a></li>
             <li><a href = "recipeindex.html">Recipe Index</a></li>
         </ul>
-    </nav>
-    <img src="images/graffiti_banner.jpg" alt="decorative image of colorful graffiti">
-    <img src="images/headshot.png" alt="headshot of the author">
-
-    <h1>The Melted Pot Kitchen</h1>
-    <p>I grew up in a bit of an odd home. My parents are immigrants from Egypt, and although I ate a lot of Egyptian food growing up, my mother also liked to experiment with food from other cultures. I've been meaning to get her recipes down and organized in one place for a while, so here they are!</p>
-
+   </nav>    
+      <h1>The Melted Pot Kitchen</h1>
+      <div class = "flex-container">
+        <p class = "flex-item">I grew up in a bit of an odd home. My parents are immigrants from Egypt, and although I ate a lot of Egyptian food growing up, my mother also liked to experiment with food from other cultures. I've been meaning to get her recipes down and organized in one place for a while, so here they are!</p>
+        <img class = flex-item src="images/headshot.png" alt="headshot of the author">
+      </div>
     </header>
     <main id = "main">
         <h2>Aunt Dorothy's Banana Bread<i class="fas fa-seedling"></i></h2>
